# jocat_scored

./: Cargo.toml  README.md
assets/: level.json
assets/prefabs/: background.ron  jocrap.ron  player.ron  throwable_log.ron  throwable_watermelon.ron  throwable_wheat.ron
assets/sprites/: jocat.json  jocrap.json
src/: components.rs  main.rs  resources.rs
src/systems/: animation.rs  input.rs  mod.rs  setup.rs
