[package]
name = "jocat_scored"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { version = "0.7.0", features = ["dynamic"] }
bevy = "0.14"
bevy_kira_audio = "0.20"
bevy_egui = "0.30"
bevy_framepace = "0.17.1"
